src/objects/FieloAlpha__Comment__c.object
<CustomObject>
    <description>Comments made by members in the members’ portal. Comments can be made on rewards and content feeds.</description>
    <fields>
        <fullName>FieloPLT__AbuseDescription__c</fullName>
        <label>Abuse Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__AbuseReporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Abuse Reporter</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipName>Comments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Body__c</fullName>
        <description>The body text of this comment.</description>
        <inlineHelpText>Enter this comment&apos;s text.</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The member who made this comment.</description>
        <inlineHelpText>Enter the name of the member who made this commment.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ParentId__c</fullName>
        <label>Parent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ok</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Abuse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>